<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Personalizar">
    <include layout="@layout/header_layout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:text="@string/personalizar_sect"
        android:textAlignment="center"
        android:textColor="#0B68CB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/select_alarma"
        android:textColor="#0B68CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:text="Alarma 1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:text="Alarma 2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="Alarma 3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_tono"
        android:textColor="#0B68CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="341dp"
        android:layout_height="39dp"
        android:layout_marginTop="26dp"
        android:hint="Archivo en su carpeta de musica personal"
        android:textColorHint="#A4D3FF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#A4D3FF"
        android:text="Browse..."
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_cloud_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/definir_apagado"
        android:textColor="#0B68CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="175dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/desactivar_opcion"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="175dp"
        android:layout_height="31dp"
        android:text="@string/voice_opcion"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="175dp"
        android:layout_height="27dp"
        android:text="@string/agitar_opcion"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#A4D3FF"
        android:text="@string/guardar"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="#A4D3FF"
        android:text="@string/cancelar"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />


</androidx.constraintlayout.widget.ConstraintLayout>